src/objects/Program_Session__c.object
<CustomObject>
    <fields>
        <fullName>Attendances__c</fullName>
        <label>Attendances</label>
        <summaryFilterItems>
            <field>Attendance__c.Attended__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Program_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Program_Service__c</fullName>
        <label>Program/Service</label>
        <referenceTo>Program_Service__c</referenceTo>
        <relationshipLabel>Program Sessions</relationshipLabel>
        <relationshipName>Program_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Theme_Activity_Type__c</fullName>
        <label>Theme / Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Youth_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Sessions</relationshipLabel>
        <relationshipName>Program_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Theme_Activity_Type__c</columns>
        <columns>Program_Service__c</columns>
        <columns>Session_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Course Sessions</label>
    </listViews>
    <listViews>
        <fullName>All_ESOL2_Courses</fullName>
        <columns>NAME</columns>
        <columns>Theme_Activity_Type__c</columns>
        <columns>Program_Service__c</columns>
        <columns>Session_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Service__c</field>
            <operation>contains</operation>
            <value>ESOL 2</value>
        </filters>
        <label>All ESOL 2 Sessions</label>
    </listViews>
    <listViews>
        <fullName>All_ESOL3_Courses</fullName>
        <columns>NAME</columns>
        <columns>Theme_Activity_Type__c</columns>
        <columns>Program_Service__c</columns>
        <columns>Session_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Service__c</field>
            <operation>contains</operation>
            <value>ESOL 3</value>
        </filters>
        <label>All ESOL 3 Sessions</label>
    </listViews>
    <listViews>
        <fullName>All_ESOL4_Courses</fullName>
        <columns>NAME</columns>
        <columns>Theme_Activity_Type__c</columns>
        <columns>Program_Service__c</columns>
        <columns>Session_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Service__c</field>
            <operation>contains</operation>
            <value>ESOL 4</value>
        </filters>
        <label>All ESOL 4 Sessions</label>
    </listViews>
    <listViews>
        <fullName>All_ESOL_1_Courses</fullName>
        <columns>NAME</columns>
        <columns>Theme_Activity_Type__c</columns>
        <columns>Program_Service__c</columns>
        <columns>Session_Date__c</columns>
        <columns>Attendances__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Service__c</field>
            <operation>contains</operation>
            <value>ESOL 1</value>
        </filters>
        <label>All ESOL 1 Sessions</label>
    </listViews>
    <listViews>
        <fullName>All_IT_Courses</fullName>
        <columns>NAME</columns>
        <columns>Theme_Activity_Type__c</columns>
        <columns>Program_Service__c</columns>
        <columns>Session_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Service__c</field>
            <operation>contains</operation>
            <value>IT</value>
        </filters>
        <label>All IT Sessions</label>
    </listViews>
    <listViews>
        <fullName>All_Numbracy_Courses</fullName>
        <columns>NAME</columns>
        <columns>Theme_Activity_Type__c</columns>
        <columns>Program_Service__c</columns>
        <columns>Session_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Service__c</field>
            <operation>contains</operation>
            <value>Numeracy</value>
        </filters>
        <label>All Numeracy Sessions</label>
    </listViews>
    <nameField>
        <displayFormat>Session-{DD}/{MM}/{YY}-{00}</displayFormat>
        <label>Program Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>